# Bantu-Os

.github/workflows/: pr-checks.yml  python-ci.yml  rust-ci.yml  security-scan.yml
bantu_os/memory/: chromadb_integration.py
shell/: Cargo.toml
tests/: test_kernel.py  test_memory.py
