[package]
name = "bantu-shell"
version = "0.1.0"
edition = "2021"
description = "Bantu-OS AI Shell - Rust REPL for tool dispatch"
authors = ["Bantu-OS Team"]

[lib]
name = "bantu_shell"
path = "src/lib.rs"

[[bin]]
name = "bantu"
path = "src/main.rs"

[dependencies]
rustyline = { version = "18", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
clap = { version = "4.5", features = ["derive"] }

[dev-dependencies]
tempfile = "3"
